--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "nodejms": ">=0.1.5",
     "underscore": ">=1.5.2",
     "config": ">=0.4.30",
-    "redis": ">=0.8.6"
+    "redis": ">=0.8.6",
+	"retry": ">=0.6.0",
+	"vcommons": ">=0.1.9",
+	"crypto-js": ">=3.1.2-1"	
   },
   "devDependencies": {
   },
