--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redisjms",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Redis-JMS Bridge",
   "keywords": [
     "jms",
@@ -24,7 +24,10 @@
     "redis": ">=0.8.6",
 	"retry": ">=0.6.0",
 	"vcommons": ">=0.1.9",
-	"crypto-js": ">=3.1.2-1"	
+	"crypto-js": ">=3.1.2-1",
+	"redisqueue": ">=0.1.1",
+	"node-uuid": ">=1.4.1",
+	"request": ">=2.27.0"
   },
   "devDependencies": {
   },
